# budget-ai-tracker

./: .gitignore  README.md  pyproject.toml
budget_app/: manage.py
budget_app/ai_Chat_bot/: apps.py  urls.py  views.py
budget_app/ai_Chat_bot/ai_part/: ai_chat.py  api.py  db_utils.py
budget_app/budget_app/: asgi.py  settings.py  urls.py  wsgi.py
budget_app/budget_llmapikey/: admin.py  api.py  apps.py  models.py
budget_app/budget_llmapikey/migrations/: 0001_initial.py  0002_alter_llmapikey_user.py
budget_app/budget_transactions/: admin.py  api.py  apps.py  models.py  ocr_Codes.py
budget_app/budget_transactions/migrations/: 0001_initial.py
budget_app/budget_users/: admin.py  api.py  apps.py  models.py
budget_app/budget_users/migrations/: 0001_initial.py  0002_alter_budgetuser_groups_and_more.py
docs/: architecture.md
