[project]
name = "budget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.15",
    "fastapi[standard]>=0.136.3",
    "google-generativeai>=0.8.0",
    "onnxruntime>=1.18.0",
    "pydantic>=2.7.0",
    "pydantic-ai[all]>=1.106.0",
    "pydantic-mermaid>=0.3.0",
    "python-dotenv>=1.2.2",
    "rapidocr>=3.8.1",
]
